--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,28 +4,28 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@android:drawable/ic_menu_myplaces"
+            android:icon="@drawable/ic_ms_home"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_trip_planner"
-            android:icon="@android:drawable/ic_menu_add"
+            android:icon="@drawable/ic_ms_plan"
             android:title="@string/menu_trip_planner" />
         <item
             android:id="@+id/nav_budget_summary"
-            android:icon="@android:drawable/ic_menu_agenda"
+            android:icon="@drawable/ic_ms_budget"
             android:title="@string/menu_budget_summary" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@android:drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_ms_gallery"
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_settings"
-            android:icon="@android:drawable/ic_menu_preferences"
+            android:icon="@drawable/ic_ms_settings"
             android:title="@string/menu_settings" />
     </group>
 
     <item
         android:id="@+id/nav_logout"
-        android:icon="@android:drawable/ic_lock_power_off"
+        android:icon="@drawable/ic_ms_logout"
         android:title="@string/menu_logout" />
 </menu>
