--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,7 +15,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="?attr/colorSurface"
+            android:theme="@style/ThemeOverlay.Material3.ActionBar"
             app:popupTheme="@style/Theme.TripBuddy.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
