--- a/app/src/main/res/layout/item_memory.xml
+++ b/app/src/main/res/layout/item_memory.xml
@@ -27,10 +27,25 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="#66000000"
-            android:textColor="#ffffff"
+            android:textColor="@android:color/white"
             android:padding="8dp"
             android:textStyle="bold"
             android:textSize="14sp"
             android:maxLines="1"/>
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|end"
+            android:layout_margin="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:background="@drawable/bg_chip_translucent"
+            android:text=""/>
     </FrameLayout>
 </com.google.android.material.card.MaterialCardView>
