--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:id="@+id/group_primary" android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_ms_home"
@@ -10,6 +10,9 @@
             android:id="@+id/nav_trip_planner"
             android:icon="@drawable/ic_ms_plan"
             android:title="@string/menu_trip_planner" />
+    </group>
+
+    <group android:id="@+id/group_insights" android:checkableBehavior="single">
         <item
             android:id="@+id/nav_budget_summary"
             android:icon="@drawable/ic_ms_budget"
@@ -18,14 +21,16 @@
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_ms_gallery"
             android:title="@string/menu_gallery" />
+    </group>
+
+    <group android:id="@+id/group_settings">
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_ms_settings"
             android:title="@string/menu_settings" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_ms_logout"
+            android:title="@string/menu_logout" />
     </group>
-
-    <item
-        android:id="@+id/nav_logout"
-        android:icon="@drawable/ic_ms_logout"
-        android:title="@string/menu_logout" />
 </menu>
